Version 0.4.23, 2011-
--------------
+ Loading of CSV or any 2-dimensional array is carriage return mode insensitive

Version 0.4.22, 2011-09-23
--------------
+ File size retrieval is dynamic = support of growing files (Windows)
x #3412495, Ztring: To_UTF8() was working wrong, corrected thanks to Andrew Jang

Version 0.4.21, 2011-08-16
--------------
+ File size retrieval is faster (Windows)
x #3157308, Ztring::Assign_FromFile(): Memory leak

Version 0.4.20, 2011-06-15
--------------
+ TinyXml updated
+ float16 (on disk) support

Version 0.4.19, 2011-03-19
--------------
+ Ztring: more compatibility with uCLibC
x BitStream_LE: wrong result if buffer underrun

Version 0.4.18, 2011-03-03
--------------
+ HTTP helpers in Unicode version
x BitStream Little Endian: count of remaining bits was wrong
x ZtringList and ZtringListList :: Read(): do not remove pending delimiters
x File Open status: error with Windows return value

Version 0.4.17, 2010-12-16
--------------
+ uClibc compatibility, thanks to Metin KAYA <metin@EnderUNIX.org>
+ BitStream: Skip methods improvements

Version 0.4.16, 2010-10-24
-------------
+ BitStream: Peek3()
x Decimal point issues with some specific compilers/OS
x ZtringList: issues with EOL
x #3025205, File is not opened if a "?" is in it

Version 0.4.15, 2010-05-14
-------------
x Ztring: Solaris compatibility was broken
x Solaris: pkgtrans packages, with optional default directory as script parameter

Version 0.4.14, 2010-05-02
-------------
+ Ztring: better compatibility with std::string
+ TinyXml import

Version 0.4.13, 2010-04-16
-------------
+ MSVC2010 project files update
+ Solaris package creation files update (with relocation)

Version 0.4.12, 2010-03-08
-------------
+ MSVC2010 project files
+ Solaris package creation files

Version 0.4.11, 2010-02-19
-------------
+ Ztring: To_int128u()
+ Ztring: ISO_8859_1()
x File::Open(): no Access_Read_Write (Windows)
x BigEndian2int128u()