@@ -72,6 +72,106 @@ using namespace std;
 namespace ZenLib
 {
 
+int16u Ztring_ISO_8859_2[96]=
+{
+    0x00A0,
+    0x0104,
+    0x02D8,
+    0x0141,
+    0x00A4,
+    0x013D,
+    0x015A,
+    0x00A7,
+    0x00A8,
+    0x0160,
+    0x015E,
+    0x0164,
+    0x0179,
+    0x00AD,
+    0x017D,
+    0x017B,
+    0x00B0,
+    0x0105,
+    0x02DB,
+    0x0142,
+    0x00B4,
+    0x013E,
+    0x015B,
+    0x02C7,
+    0x00B8,
+    0x0161,
+    0x015F,
+    0x0165,
+    0x017A,
+    0x02DD,
+    0x017E,
+    0x017C,
+    0x0154,
+    0x00C1,
+    0x00C2,
+    0x0102,
+    0x00C4,
+    0x0139,
+    0x0106,
+    0x00C7,
+    0x010C,
+    0x00C9,
+    0x0118,
+    0x00CB,
+    0x011A,
+    0x00CD,
+    0x00CE,
+    0x010E,
+    0x0110,
+    0x0143,
+    0x0147,
+    0x00D3,
+    0x00D4,
+    0x0150,
+    0x00D6,
+    0x00D7,
+    0x0158,
+    0x016E,
+    0x00DA,
+    0x0170,
+    0x00DC,
+    0x00DD,
+    0x0162,
+    0x00DF,
+    0x0155,
+    0x00E1,
+    0x00E2,
+    0x0103,
+    0x00E4,
+    0x013A,
+    0x0107,
+    0x00E7,
+    0x010D,
+    0x00E9,
+    0x0119,
+    0x00EB,
+    0x011B,
+    0x00ED,
+    0x00EE,
+    0x010F,
+    0x0111,
+    0x0144,
+    0x0148,
+    0x00F3,
+    0x00F4,
+    0x0151,
+    0x00F6,
+    0x00F7,
+    0x0159,
+    0x016F,
+    0x00FA,
+    0x0171,
+    0x00FC,
+    0x00FD,
+    0x0163,
+    0x02D9,
+};
+    
 //---------------------------------------------------------------------------
 Ztring EmptyZtring;
 //---------------------------------------------------------------------------
@@ -222,96 +322,65 @@ Ztring& Ztring::From_UTF8 (const char* S)
             #endif
     #else //ZENLIB_USEWX
         #ifdef _UNICODE
-            #ifdef WINDOWS
-                if (IsWin9X())
+            // Don't use MultiByteToWideChar(), some characters are not well decoded
+			clear();
+            const int8u* Z=(const int8u*)S;
+            while (*Z) //0 is end
+            {
+                //1 byte
+                if (*Z<0x80)
                 {
-                    clear();
-                    const int8u* Z=(const int8u*)S;
-                    while (*Z) //0 is end
+                    operator += ((wchar_t)(*Z));
+                    Z++;
+                }
+                //2 bytes
+                else if ((*Z&0xE0)==0xC0)
+                {
+                    if ((*(Z+1)&0xC0)==0x80)
                     {
-                        //1 byte
-                        if (*Z<0x80)
-                        {
-                            operator += ((wchar_t)(*Z));
-                            Z++;
-                        }
-                        //2 bytes
-                        else if ((*Z&0xE0)==0xC0)
-                        {
-                            if ((*(Z+1)&0xC0)==0x80)
-                            {
-                                operator += ((((wchar_t)(*Z&0x1F))<<6)|(*(Z+1)&0x3F));
-                                Z+=2;
-                            }
-                            else
-                                break; //Bad character
-                        }
-                        else
-                            break; //Bad character (or to be encoded in UTF-16LE, not yet supported)
+                        operator += ((((wchar_t)(*Z&0x1F))<<6)|(*(Z+1)&0x3F));
+                        Z+=2;
+                    }
+                    else
+                    {
+                        clear();
+                        return *this; //Bad character
+                    }
+                }
+                //3 bytes
+                else if ((*Z&0xF0)==0xE0)
+                {
+                    if ((*(Z+1)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80)
+                    {
+                        operator += ((((wchar_t)(*Z&0x0F))<<12)|((*(Z+1)&0x3F)<<6)|(*(Z+2)&0x3F));
+                        Z+=3;
+                    }
+                    else
+                    {
+                        clear();
+                        return *this; //Bad character
+                    }
+                }
+                //4 bytes
+                else if ((*Z&0xF8)==0xF0)
+                {
+                    if ((*(Z+1)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80)
+                    {
+                        operator += ((((wchar_t)(*Z&0x0F))<<18)|((*(Z+1)&0x3F)<<12)||((*(Z+2)&0x3F)<<6)|(*(Z+3)&0x3F));
+                        Z+=4;
+                    }
+                    else
+                    {
+                        clear();
+                        return *this; //Bad character
                     }
                 }
                 else
                 {
-                    int Size=MultiByteToWideChar(CP_UTF8, MB_ERR_INVALID_CHARS, S, -1, NULL, 0);
-                    if (Size!=0)
-                    {
-                        Char* WideString=new Char[Size+1];
-                        MultiByteToWideChar(CP_UTF8, MB_ERR_INVALID_CHARS, S, -1, WideString, Size);
-                        WideString[Size]=L'\0';
-                        assign (WideString+(WideString[0]==0xFEFF?1:0));
-                        delete[] WideString; //WideString=NULL;
-                    }
-                    else
-                        clear();
+                    clear();
+                    return *this; //Bad character
                 }
-            #else //WINDOWS
-                clear();
-                const int8u* Z=(const int8u*)S;
-                while (*Z) //0 is end
-                {
-                    //1 byte
-                    if (*Z<0x80)
-                    {
-                        operator += ((wchar_t)(*Z));
-                        Z++;
-                    }
-                    //2 bytes
-                    else if ((*Z&0xE0)==0xC0)
-                    {
-                        if ((*(Z+1)&0xC0)==0x80)
-                        {
-                            operator += ((((wchar_t)(*Z&0x1F))<<6)|(*(Z+1)&0x3F));
-                            Z+=2;
-                        }
-                        else
-                            break; //Bad character
-                    }
-                    //3 bytes
-                    else if ((*Z&0xF0)==0xE0)
-                    {
-                        if ((*(Z+1)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80)
-                        {
-                            operator += ((((wchar_t)(*Z&0x0F))<<12)|((*(Z+1)&0x3F)<<6)|(*(Z+2)&0x3F));
-                            Z+=3;
-                        }
-                        else
-                            break; //Bad character
-                    }
-                    //4 bytes
-                    else if ((*Z&0xF8)==0xF0)
-                    {
-                        if ((*(Z+1)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80 && (*(Z+2)&0xC0)==0x80)
-                        {
-                            operator += ((((wchar_t)(*Z&0x0F))<<18)|((*(Z+1)&0x3F)<<12)||((*(Z+2)&0x3F)<<6)|(*(Z+3)&0x3F));
-                            Z+=4;
-                        }
-                        else
-                            break; //Bad character
-                    }
-                    else
-                        break; //Bad character
-                }
-            #endif
+            }
         #else
             assign(S); //Not implemented
         #endif
@@ -579,6 +648,45 @@ Ztring& Ztring::From_ISO_8859_1(const char* S, size_type Start, size_type Length
         strncpy(Temp, S +Start, Length);
         Temp[Length] = '\0';
         From_ISO_8859_1(Temp);
+        delete[] Temp;
+    #else
+        assign(S +Start, Length);
+        if (find(_T('\0')) != std::string::npos)
+            resize(find(_T('\0')));
+    #endif
+    return *this;
+}
+
+Ztring& Ztring::From_ISO_8859_2(const char* S)
+{
+    size_t Length = strlen(S);
+    wchar_t* Temp = new wchar_t[Length +1];
+
+    for (size_t Pos=0; Pos<Length+1; Pos++)
+    {
+        if ((int8u)S[Pos]>=0xA0)
+            Temp[Pos]=(wchar_t)Ztring_ISO_8859_2[((int8u)S[Pos])-0xA0];
+        else
+            Temp[Pos]=(wchar_t)((int8u)S[Pos]);
+    }
+
+    From_Unicode(Temp);
+    delete[] Temp;
+    return *this;
+}
+
+Ztring& Ztring::From_ISO_8859_2(const char* S, size_type Start, size_type Length)
+{
+    if (S==NULL)
+        return *this;
+
+    if (Length==Error)
+        Length=strlen(S+Start);
+    #ifdef _UNICODE
+        char* Temp = new char[Length+1];
+        strncpy(Temp, S +Start, Length);
+        Temp[Length] = '\0';
+        From_ISO_8859_2(Temp);
         delete[] Temp;
     #else
         assign(S +Start, Length);
@@ -1287,112 +1395,71 @@ std::wstring Ztring::To_Unicode () const
 std::string Ztring::To_UTF8 () const
 {
     #ifdef _UNICODE
-        #ifdef ZENLIB_USEWX
-            return wxConvUTF8.cWC2MB(c_str()).data();
-        #else //ZENLIB_USEWX
-            #ifdef WINDOWS
-                if (IsWin9X())
-                {
-                    std::string ToReturn;
-                    const wchar_t* Z=c_str();
-                    while (*Z) //0 is end
-                    {
-                        //1 byte
-                        if (*Z<0x80)
-                            ToReturn += (char)  (*Z);
-                        else if (*Z<0x1000)
-                        {
-                            ToReturn += (char)(((*Z)>> 6)&0x1F);
-                            ToReturn += (char)( (*Z)     &0x3F);
-                        }
-                        else
-                            break; //Bad character (or UTF-16LE, not yet supported)
-                        Z++;
-                    }
-                    return ToReturn;
-                }
-                else
-                {
-                    int Size=WideCharToMultiByte(CP_UTF8, 0, c_str(), -1, NULL, 0, NULL, NULL);
-                    if (Size!=0)
-                    {
-                        char* AnsiString=new char[Size+1];
-                        WideCharToMultiByte(CP_UTF8, 0, c_str(), -1, AnsiString, Size, NULL, NULL);
-                        AnsiString[Size]='\0';
-                        std::string ToReturn(AnsiString);
-                        delete[] AnsiString; //AnsiString=NULL;
-                        return ToReturn;
-                    }
-                    else
-                        return std::string();
-                }
-            #else //WINDOWS
-                //Correction thanks to Andrew Jang
-                std::string ToReturn;
-                ToReturn.reserve(size()); // more efficient
+        //Correction thanks to Andrew Jang
+        // Don't use WideCharToMultiByte(), some characters are not well converted
+		std::string ToReturn;
+        ToReturn.reserve(size()); // more efficient
 
-                const wchar_t* Z=c_str();
+        const wchar_t* Z=c_str();
 
-                while (*Z)
-                {
-                    int32u wc; // must be unsigned.
+        while (*Z)
+        {
+            int32u wc; // must be unsigned.
 
-                    if (sizeof(wchar_t) == 2)
-                        wc = (int16u) *Z; // avoid a cast problem if wchar_t is signed.
-                    else
-                        wc = *Z;
+            if (sizeof(wchar_t) == 2)
+                wc = (int16u) *Z; // avoid a cast problem if wchar_t is signed.
+            else
+                wc = *Z;
 
-                    int count;
+            int count;
 
-                    // refer to http://en.wikipedia.org/wiki/UTF-8#Description
+            // refer to http://en.wikipedia.org/wiki/UTF-8#Description
 
-                    if (wc < 0x80)
-                        count = 1;
-                    else if (wc < 0x800)
-                        count = 2;
-                    else if (wc < 0x10000)
-                        count = 3;
-                    else if (wc < 0x200000)
-                        count = 4;
-                    else if (wc < 0x4000000)
-                        count = 5;
-                    else if (wc <= 0x7fffffff)
-                        count = 6;
-                    else
-                        break;  // bad character
+            if (wc < 0x80)
+                count = 1;
+            else if (wc < 0x800)
+                count = 2;
+            else if (wc < 0x10000)
+                count = 3;
+            else if (wc < 0x200000)
+                count = 4;
+            else if (wc < 0x4000000)
+                count = 5;
+            else if (wc <= 0x7fffffff)
+                count = 6;
+            else
+                break;  // bad character
 
-                    int64u utfbuf = 0; // 8 bytes
-                    char* utf8chars = (char*) &utfbuf;
+            int64u utfbuf = 0; // 8 bytes
+            char* utf8chars = (char*) &utfbuf;
 
-                    switch (count)
-                    {
-                    case 6:
-                        utf8chars[5] = 0x80 | (wc & 0x3f);
-                        wc = (wc >> 6) | 0x4000000;
-                    case 5:
-                        utf8chars[4] = 0x80 | (wc & 0x3f);
-                        wc = (wc >> 6) | 0x200000;
-                    case 4:
-                        utf8chars[3] = 0x80 | (wc & 0x3f);
-                        wc = (wc >> 6) | 0x10000;
-                    case 3:
-                        utf8chars[2] = 0x80 | (wc & 0x3f);
-                        wc = (wc >> 6) | 0x800;
-                    case 2:
-                        utf8chars[1] = 0x80 | (wc & 0x3f);
-                        wc = (wc >> 6) | 0xc0;
-                    case 1:
-                        utf8chars[0] = wc;
-                    }
+            switch (count)
+            {
+            case 6:
+                utf8chars[5] = 0x80 | (wc & 0x3f);
+                wc = (wc >> 6) | 0x4000000;
+            case 5:
+                utf8chars[4] = 0x80 | (wc & 0x3f);
+                wc = (wc >> 6) | 0x200000;
+            case 4:
+                utf8chars[3] = 0x80 | (wc & 0x3f);
+                wc = (wc >> 6) | 0x10000;
+            case 3:
+                utf8chars[2] = 0x80 | (wc & 0x3f);
+                wc = (wc >> 6) | 0x800;
+            case 2:
+                utf8chars[1] = 0x80 | (wc & 0x3f);
+                wc = (wc >> 6) | 0xc0;
+            case 1:
+                utf8chars[0] = wc;
+            }
 
-                    ToReturn += utf8chars;
+            ToReturn += utf8chars;
 
-                    ++Z;
-                }
+            ++Z;
+        }
 
-                return ToReturn;
-            #endif
-        #endif //ZENLIB_USEWX
+        return ToReturn;
     #else
         #ifdef ZENLIB_USEWX
             return wxConvUTF8.cWC2MB(wxConvCurrent->cMB2WC(c_str())).data();
